# progra3_tarea2

./: CMakeLists.txt  README.md  }
include/: Coordenada.h  CoreNumeric.h  Esfera.h  Vector3D.h  concepts.h
src/: main.cpp
tests/: test.cpp
